--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="hero-image">
                 <div class="profile-placeholder">
                     <div class="profile-inner">
-                        <img src="C:\Users\Administrator\Pictures\Myimage.jpg" alt="Meghasyam" class="profile-img">
+                        <img src="Myimage.jpg" alt="Meghasyam" class="profile-img">
                     </div>
                     <div class="orbit orbit-1"></div>
                     <div class="orbit orbit-2"></div>
@@ -104,7 +104,7 @@
                 <div class="about-image">
                     <div class="profile-placeholder-large">
                         <div class="profile-inner-large">
-                            <img src="C:\Users\Administrator\Desktop\Protfolio\myimage2.jpg" alt="Meghasyam" class="profile-img-large">
+                            <img src=myimage2.jpg" alt="Meghasyam" class="profile-img-large">
                         </div>
                         <div class="glow"></div>
                     </div>
@@ -370,4 +370,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
