--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a href="#contact" class="nav-link">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a href="C:\Users\Administrator\Desktop\Protfolio\Pinniboyina Meghasyam - Resume (2).pdf" class="nav-link resume-btn">Download Resume</a>
+                    <a href="Pinniboyina Meghasyam - Resume (2).pdf" class="nav-link resume-btn">Download Resume</a>
                 </li>
             </ul>
             <div class="hamburger">
@@ -104,7 +104,7 @@
                 <div class="about-image">
                     <div class="profile-placeholder-large">
                         <div class="profile-inner-large">
-                            <img src=myimage2.jpg" alt="Meghasyam" class="profile-img-large">
+                            <img src=myimage.jpg" alt="Meghasyam" class="profile-img-large">
                         </div>
                         <div class="glow"></div>
                     </div>
@@ -372,3 +372,4 @@
 </body>
 
 </html>
+
