--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="about-image">
                     <div class="profile-placeholder-large">
                         <div class="profile-inner-large">
-                            <img src="Myimage.jpg"  alt="Meghasyam" class="profile-img-large">
+                            <img src="myimage2.jpg"  alt="Meghasyam" class="profile-img-large">
                         </div>
                         <div class="glow"></div>
                     </div>
@@ -372,6 +372,7 @@
 </body>
 
 </html>
+
 
 
 
