--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="hero-image">
                 <div class="profile-placeholder">
                     <div class="profile-inner">
-                        <img src="myimage.jpg" alt="Meghasyam" class="profile-img">
+                        <img src="Myimage.jpg" alt="Meghasyam" class="profile-img">
                     </div>
                     <div class="orbit orbit-1"></div>
                     <div class="orbit orbit-2"></div>
@@ -371,3 +371,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
